--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-*.pth
-*.model
-*.vocab
+data/*.json
+data/*.en
+data/*.ch
+tokenizer/*.model
+tokenizer/*.vocab
+experiment/*.pth
+experiment/output.txt
